
MACRO( SIMXML_XSDGEN BASENAME )

  ADD_CUSTOM_COMMAND(
    OUTPUT 
    "${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.hxx" 
    "${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.cxx" 
    "${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.ixx" 
    COMMAND xsdgen "${CMAKE_CURRENT_SOURCE_DIR}/${BASENAME}.xsd" "${CMAKE_CURRENT_BINARY_DIR}/"
    DEPENDS 
    xsdgen
    "${CMAKE_CURRENT_SOURCE_DIR}/${BASENAME}.xsd"
  )
  
  SET_SOURCE_FILES_PROPERTIES(
    "${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.hxx" 
    "${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.cxx"
    "${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.ixx"
    PROPERTIES 
    GENERATED 1
  )

  LIST( APPEND SIMXML_XSDGEN_SOURCES "${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.hxx" )
  LIST( APPEND SIMXML_XSDGEN_SOURCES "${CMAKE_CURRENT_BINARY_DIR}/${BASENAME}.cxx" )

ENDMACRO()

SIMXML_XSDGEN( simbldg )
SIMXML_XSDGEN( simcore )
SIMXML_XSDGEN( simgeom )
SIMXML_XSDGEN( simmep )
SIMXML_XSDGEN( simmodel )
SIMXML_XSDGEN( simres )

SET(simxmllib_source
  SimXmlDoc.hpp
  SimXmlDoc.cpp
  SimXmlElement.hpp
  SimXmlElement.cpp
  "${SIMXML_XSDGEN_SOURCES}" 
)

ADD_LIBRARY(simxmllib STATIC ${simxmllib_source})
TARGET_LINK_LIBRARIES( simxmllib xmllib ${QT_LIBS} )

